feat: flight information display

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
     {% block parentBody %} {% endblock %}
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="/index">
+        <a class="navbar-brand" href="/">
           <img src="../static/img/icon_logo.png" height="34" alt="" />
         </a>
         <button
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item {% if not page %}active{% endif %}">
-              <a class="nav-link" href="/index">Home</a>
+              <a class="nav-link" href="/flight">Home</a>
             </li>
             <li class="nav-item {% if page == 'bookings' %}active{% endif %}">
               <a class="nav-link" href="/bookings">My Bookings</a>
@@ -167,36 +167,36 @@
                 <div>
                   <ul class="link-list">
                     <li class="list-item">
-                      <a class="footer-links" href="/contact">Contact Us</a>
+                      <!-- <a class="footer-links" href="/contact">Contact Us</a> -->
                     </li>
                     <li class="list-item">
-                      <a class="footer-links" href="/aboutus">About Us</a>
+                      <!-- <a class="footer-links" href="/aboutus">About Us</a> -->
                     </li>
                     <li class="list-item">
-                      <a class="footer-links" href="/privacypolicy"
+                      <!-- <a class="footer-links" href="/privacypolicy"
                         >Privacy Policy</a
-                      >
+                      > -->
                     </li>
                     <li class="list-item">
-                      <a class="footer-links" href="/termsandconditions"
+                      <!-- <a class="footer-links" href="/termsandconditions"
                         >Terms &amp; Conditions</a
-                      >
+                      > -->
                     </li>
                   </ul>
                 </div>
               </div>
               <div class="quote-container">
                 <div class="quote">
-                  “Surround yourself with people that are smarter than you, give
-                  them everything they need to grow, and your business will
-                  thrive.”
+                  “Enjoy your flight and trip. Have fun. XD”
                 </div>
-                <div class="quote-by">- Richard Branson</div>
+                <div class="quote-by">
+                  - Zeyu Gu, Yansong Bai, Yuzheng Zhang
+                </div>
               </div>
             </div>
             <div class="social-links">
               <div class="social-icons">
-                <a href="#" class="social-icon">
+                <!-- <a href="#" class="social-icon">
                   <svg
                     width="20"
                     height="20"
@@ -208,8 +208,8 @@
                       d="m2 5.33333333h-2v2.66666667h2v8h3.33333333v-8h2.428l.23866667-2.66666667h-2.66666667v-1.11133333c0-.63666667.128-.88866667.74333334-.88866667h1.92333333v-3.33333333h-2.53866667c-2.39733333 0-3.46133333 1.05533333-3.46133333 3.07666667z"
                     ></path>
                   </svg>
-                </a>
-                <a href="#" class="social-icon">
+                </a> -->
+                <!-- <a href="#" class="social-icon">
                   <svg
                     width="20"
                     height="20"
@@ -221,8 +221,8 @@
                       d="m16 1.70466667c-.5886667.26133333-1.2213333.43733333-1.8853333.51666666.678-.406 1.1986666-1.04933333 1.4433333-1.816-.634.376-1.3366667.64933334-2.0846667.79666667-.598-.638-1.452-1.03666667-2.396-1.03666667-2.1193333 0-3.67666663 1.97733334-3.19799997 4.03-2.72733333-.13666666-5.146-1.44333333-6.76533333-3.42933333-.86 1.47533333-.446 3.40533333 1.01533333 4.38266667-.53733333-.01733334-1.044-.16466667-1.486-.41066667-.036 1.52066667 1.054 2.94333333 2.63266667 3.26-.462.12533333-.968.15466667-1.48266667.056.41733334 1.304 1.62933334 2.2526667 3.06666667 2.2793333-1.38 1.082-3.11866667 1.5653334-4.86 1.36 1.45266667.9313334 3.17866667 1.4746667 5.032 1.4746667 6.0946667 0 9.538-5.14733333 9.33-9.764.6413333-.46333333 1.198-1.04133333 1.638-1.69933333z"
                     ></path>
                   </svg>
-                </a>
-                <a href="#" class="social-icon">
+                </a> -->
+                <!--  <a href="#" class="social-icon">
                   <svg
                     height="50"
                     width="50"
@@ -241,7 +241,7 @@
                       ></path>
                     </g>
                   </svg>
-                </a>
+                </a> -->
                 <a href="#" class="social-icon">
                   <svg
                     width="20"
@@ -255,7 +255,7 @@
                     ></path>
                   </svg>
                 </a>
-                <a href="#" class="social-icon">
+                <!-- <a href="#" class="social-icon">
                   <svg
                     height="25"
                     width="20"
@@ -274,7 +274,7 @@
                       ></path>
                     </g>
                   </svg>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
