google login userid added in db, login logo (#40)
* update gitignore

* created city recommendation on the frontend using default cities

* updated recommedation page

* add username check in register page

* delete print statements

* table modified

* google login userid added in db and login logo

Co-authored-by: Zeyu Gu <mikegu0508@gmail.com>

--- a/templates/login.html
+++ b/templates/login.html
@@ -53,8 +53,10 @@
           </div>
 
           <a href="/register"><b>Don't have an account?</b></a>
+          <a href="/login"><img src="../static/img/google_login.png" alt="google login" 
+            style="width:191px;height:46px;"></a>
           <button>Log in</button>
-        </form>
+        </form> 
       </div>
       <div class="overlay-container">
         <div class="overlay">
