--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -17,7 +17,7 @@
       Know Your Next Destination In Just a Second!
     </h1>
     <div class="recommend-input-form">
-      <form action="recommend/result" method="GET">
+      <form action="/recommend/result" method="GET">
         <div>
           <label for="location">Select Your Location of Residence</label>
           <select id="location" class="custom-select" name="location-origin" style="width: 30%">
