--- a/static/flight.css
+++ b/static/flight.css
@@ -1,210 +1,190 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+/* Resetting */
 * {
-    box-sizing: border-box;
-  }
-  body {
-    font-family: sans-serif;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: ; */
-  }
-  
-  #search-form {
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px solid red;
-    width: 50%;
-    position: relative;
-  }
-  
-  #header {
-    height: 80px;
-    background: red;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  #header h1 {
-    color: #FFF;
-    margin-left: 20px;
-    font-size: 1.3em
-  }
-  
-  .flight {
-    padding: 20px;
-  }
-  .flight input, select {
-      color: #6B6A6A;
-  }
-  
-  .info-box {
-    padding: 10px 0;
-    margin-top: 20px;
-    flex: 1;
-    border-right: 20px solid transparent;
-  }
-  .info-box:last-child {
-    border-right: none;
-  }
-  .info-box label {
-    display: block;
-    color: #6B6A6A;
-    font-size: .9em;
-  }
-  .info-box input[type=text], input[type=submit], select {
-    border: none;
-    outline: none;
-    background: #E2E0E0;
-    margin-top: 5px;
-    width: 100%;
-    padding: 5px;
-    height: 30px;
-    border-radius: 3px;
-  }
-  
-  #flight-type {
-    display: flex;
-    justify-content: flex-start;
-    border-bottom: 1px dotted silver;
-  }
-  #flight-type .info-box {
-    flex: 0 1 25%;
-    display:flex;
-    align-items: center;
-  }
-  
-  #flight-depart {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px dotted silver;
-  }
-  #flight-depart .info-box {
-    position: relative;
-  }
-  #depart-res, #arrive-res {
-    position: absolute;
-    background: #FFFFFF;
-  }
-  #depart-res p, #arrive-res p {
-    padding: 7px 2px;
-    border-bottom: 1px dotted silver;
-  }
-  #depart-res p:hover, #arrive-res p:hover {
-    background: #EDEDED;
-    cursor: pointer;
-  }
-  
-  #flight-dates {
-    display: flex;
-    border-bottom: 1px dotted silver;
-  }
-  
-  #flight-info {
-    display: flex;
-    border-bottom: 1px dotted silver;
-  }
-  
-  #flight-search .info-box {
-    display: flex;
-    justify-content: center;
-  }
-  #flight-search input[type=submit] {
-    background: #55AF3A;
-    color: white;
     padding: 0;
-    height: 50px;
-    font-size: 1.2em;
-  }
-  
-  /* Calender */
-  #calender {
-    border: 3px solid red;
-    padding: 5px;
-    opacity: 0;
-    background: #FFFFFF;
-    position: absolute;
-    transition: opacity .3s;
-    pointer-events: none;
-  }
-  #calender .nav {
-    padding: 3px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  #calender .nav button {
-    background: #FF3240;
-    border: none;
-    outline: none;
-    color: #FFFFFF;
-    padding: 5px 8px;
-    font-weight: 600;
-    border-radius: 3px;
-  }
-  table {
-    border: 1px solid #DBDBDB;
-    background: #F4F4F4;
-  }
-  table td {
-    border: 1px solid #DBDBDB;
-    padding: 5px;
-    text-align: center;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    /* background-color: rgb(20, 117, 220); */
+    background-image: linear-gradient(135deg, rgb(20, 117, 220), #b8017b);
+}
+
+html {
+    height: 100%;
+}
+
+.wrapper {
+    max-width: 800px;
+    margin: 50px auto;
+}
+
+.wrapper form {
+    padding: 30px 50px;
+}
+
+.wrapper form .form-group {
+    padding-bottom: .5rem;
+}
+
+.wrapper form .option {
+    position: relative;
+    padding-left: 25px;
     cursor: pointer;
-  }
-  .normal {
-    color: rgba(0,0,0,.8)
-  }
-  .today {
-    background: #FF3240;
-    color: #FFFFFF;
-  }
-  .closed {
-    color: #DBDBDB;
-    cursor: default;
-  }
-  .picked {
-    background: green;
-  }
-  #month {
-    display: inline-block;
-  }
-  
-  #confirm {
-    width: 500px;
-    padding: 20px;
-    border: 5px solid #55AF3A;
-    margin: 20px auto;
-    opacity: 0;
-  }
-  #confirm h3 {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-  }
-  #confirm p {
-    padding: 10px;
-  }
-  #confirm strong {
+    display: block;
+}
+
+.wrapper form .option input {
+    display: none;
+}
+
+.wrapper form .checkmark {
+    position: absolute;
+    top: 4px;
+    left: 0;
+    height: 17px;
+    width: 17px;
+    background-color: #fff;
+    border: 1px solid #aaa;
+    border-radius: 50%;
+}
+
+.wrapper form .option input:checked~.checkmark:after {
+    display: block;
+}
+
+.wrapper form .option .checkmark:after {
+    content: "";
+    width: 7px;
+    height: 7px;
+    display: block;
+    border-radius: 50%;
+    background-color: #333;
+    position: absolute;
+    top: 48%;
+    left: 52%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out 0s;
+}
+
+.wrapper form .option:hover input[type="radio"]~.checkmark {
+    background-color: #f4f4f4;
+}
+
+.wrapper form .option input[type="radio"]:checked~.checkmark {
+    background: #fff;
+    color: #fff;
+    transition: 300ms ease-in-out 0s;
+}
+
+.wrapper form .option input[type="radio"]:checked~.checkmark:after {
+    transform: translate(-50%, -50%) scale(1);
+    color: #fff;
+}
+
+.wrapper form a {
+    color: #333;
+}
+
+.wrapper form .form-control {
+    outline: none;
+    border: none;
+}
+
+.wrapper form .form-control:focus {
+    box-shadow: none;
+}
+
+.wrapper form input[type="text"]:focus::placeholder {
+    color: transparent
+}
+
+input[type="date"] {
+    cursor: pointer;
+}
+
+.wrapper form .label::after {
+    position: absolute;
+    /* background-color: #fff; */
+    top: 5px;
+    left: 0px;
+    font-size: 0.9rem;
+    margin: 0rem 0.4rem;
+    text-transform: uppercase;
+    letter-spacing: 0.08rem;
     font-weight: 600;
-  }
+    color: #999;
+    transition: all .2s ease-in-out;
+    transform: scale(0);
+}
 
-  hr {
-    border: 0;
-    clear:both;
-    display:block;
-    width: 96%;               
-    background-color: #4c4e52;
-    height: 1px;
-  }
+.wrapper form .label#from::after {
+    content: 'From';
+}
 
-  .recommendation_box {
-    margin-left: 10%;
-    margin-right: 10%;
-  }
+.wrapper form .label#to::after {
+    content: 'To';
+}
 
-  .cities_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+.wrapper form .label#depart::after {
+    content: 'Depart Date';
+}
+
+.wrapper form .label#return::after {
+    content: 'Return Date';
+}
+
+.wrapper form .label#psngr::after {
+    content: 'Traveller(s)';
+}
+
+.wrapper form input[type="text"]:focus~.label::after {
+    top: -15px;
+    left: 0px;
+    transform: scale(1);
+}
+
+.wrapper form input[type="date"]:focus~.label::after {
+    top: -15px;
+    left: 0px;
+    transform: scale(1);
+}
+
+/* Margin */
+.margin {
+    margin: 2rem 0rem;
+}
+
+li:hover {
+    background-color: #2d77ed;
+}
+
+#form-container {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#form-title-container {
+    margin: 30px 20px 20px 50px;
+}
+
+#search-button {
+    background: none;
+    border: none;
+}
+/* Media Queries */
+@media(max-width: 575.5px) {
+    .wrapper {
+        margin: 10px;
+    }
+
+    .wrapper form {
+        padding: 20px;
+    }
+
+    .margin {
+        margin: .2rem 0rem;
+    }
+}
