--- a/templates/search.html
+++ b/templates/search.html
@@ -623,7 +623,7 @@
                     endif %}" {% if forloop.counter == 1 %}checked{% endif %}>
                     {% else %}
                     <form
-                      action="url/review"
+                      action="/flight/review"
                       method="GET"
                       style="display: flex"
                     >
