--- a/templates/book.html
+++ b/templates/book.html
@@ -4,12 +4,16 @@
 <script type="text/javascript" src="../static/js/book.js"></script>
 {% endblock %} {% block body %}
 <section class="section section1">
-  <form action="{% url 'book' %}" onsubmit="return book_submit()" method="POST">
+  <form
+    action="/flight/ticket/book"
+    onsubmit="return book_submit()"
+    method="POST"
+  >
     <input type="hidden" name="flight1" value="{{flight1.id}}" />
     <input
       type="hidden"
       name="flight1Date"
-      value="{{flight1ddat.strftime('%d %m %Y')}}"
+      value="{{flight1ddate.strftime('%d-%m-%Y')}}"
     />
     <input type="hidden" name="flight1Class" value="{{seat}}" />
     {% if flight2 %}
@@ -18,7 +22,7 @@
     <input
       type="hidden"
       name="flight2Date"
-      value="{{flight2ddate.strftime('%d %m %Y')}}"
+      value="{{flight2ddate.strftime('%d-%m-%Y')}}"
     />
     {% endif %}
     <div class="row main-row">
@@ -44,9 +48,9 @@
               <div class="time">{{flight1.depart_time.strftime('%H:%M')}}</div>
               <div
                 class="date ddate"
-                data-value="{{flight1ddate.strftime('%d %m %Y')}}"
+                data-value="{{flight1ddate.strftime('%d-%m-%Y')}}"
               >
-                {{flight1ddate.strftime('%a, %d %m %Y')}}
+                {{flight1ddate.strftime("%a, %d %m %Y")}}
               </div>
               <div class="place">{{flight1.origin.city}}</div>
               <div class="airport">{{flight1.origin.airport}}</div>
@@ -58,9 +62,9 @@
               <div class="time">{{flight1.arrival_time.strftime('%H:%M')}}</div>
               <div
                 class="date adate"
-                data-value="{{flight1adate.strftime('%d %m %Y')}}"
+                data-value="{{flight1adate.strftime('%d-%m-%Y')}}"
               >
-                {{flight1adate.strftime('%a, %d %m %Y')}}
+                {{flight1adate.strftime("%a, %d %m %Y")}}
               </div>
               <div class="place">{{flight1.destination.city}}</div>
               <div class="airport">{{flight1.destination.airport}}</div>
@@ -88,7 +92,9 @@
             </div>
             <div class="col-3 depart-time">
               <div class="time">{{flight2.depart_time.strftime('%H:%M')}}</div>
-              <div class="date ddate">{{flight2ddate.strftime('%a, %d %m %Y')}}</div>
+              <div class="date ddate">
+                {{flight2ddate.strftime("%a, %d %m %Y")}}
+              </div>
               <div class="place">{{flight2.origin.city}}</div>
               <div class="airport">{{flight2.origin.airport}}</div>
             </div>
@@ -97,7 +103,9 @@
             </div>
             <div class="col-3 arrival-time">
               <div class="time">{{flight2.arrival_time.strftime('%H:%M')}}</div>
-              <div class="date adate">{{flight2adate.strftime('%a, %d %m %Y')}}</div>
+              <div class="date adate">
+                {{flight2adate.strftime("%a, %d %m %Y")}}
+              </div>
               <div class="place">{{flight2.destination.city}}</div>
               <div class="airport">{{flight2.destination.airport}}</div>
             </div>
@@ -841,32 +849,31 @@
           <div class="row base-fare">
             <div class="base-fae-label">Base Fare:</div>
             <div class="base-fare-value">
-              {% if seat == 'First' %} ₹
+              {% if seat == 'First' %} $
               <span>
-                {% if flight2 %} {{flight1.first_fare+flight2.first_fare}}
-                {% else %} {{flight1.first_fare}} {% endif %}
+                {% if flight2 %} {{flight1.first_fare+flight2.first_fare}} {%
+                else %} {{flight1.first_fare}} {% endif %}
               </span>
               <input
                 type="hidden"
                 id="basefare"
                 value="{% if flight2 %}{{flight1.first_fare+flight2.first_fare}}{% else %}{{flight1.first_fare}}{% endif %}"
               />
-              {% elif seat == 'Business' %} ₹
+              {% elif seat == 'Business' %} $
               <span>
-                {% if flight2 %} {{flight1.business_fare |
-                add:flight2.business_fare}} {% else %} {{flight1.business_fare}}
-                {% endif %}
+                {% if flight2 %} {{flight1.business_fare+
+                flight2.business_fare}} {% else %} {{flight1.business_fare}} {%
+                endif %}
               </span>
               <input
                 type="hidden"
                 id="basefare"
                 value="{% if flight2 %}{{flight1.business_fare+flight2.business_fare}}{% else %}{{flight1.business_fare}}{% endif %}"
               />
-              {% elif seat == 'Economy' %} ₹
+              {% elif seat == 'Economy' %} $
               <span>
-                {% if flight2 %} {{flight1.economy_fare |
-                add:flight2.economy_fare}} {% else %} {{flight1.economy_fare}}
-                {% endif %}
+                {% if flight2 %} {{flight1.economy_fare+flight2.economy_fare}}
+                {% else %} {{flight1.economy_fare}} {% endif %}
               </span>
               <input
                 type="hidden"
@@ -885,28 +892,42 @@
           <div class="total-fare">
             <div class="total-fare-label">Total Fare:</div>
             <div class="total-fare-value">
-              {% if seat == 'First' %} ₹
+              {% if seat == 'First' %} $
               <span>
-                {% if flight2 %} {{flight1.first_fare+flight2.first_fare |
-                add:fee}} {% else %} {{flight1.first_fare+fee}} {% endif
-                %}
+                {% if flight2 %} {{flight1.first_fare+flight2.first_fare+fee}}
+                {% else %} {{flight1.first_fare+fee}} {% endif %}
               </span>
               {% elif seat == 'Business' %} $
               <span>
-                {% if flight2 %} {{flight1.business_fare |
-                add:flight2.business_fare+fee}} {% else %}
+                {% if flight2 %}
+                {{flight1.business_fare+flight2.business_fare+fee}} {% else %}
                 {{flight1.business_fare+fee}} {% endif %}
               </span>
-              {% elif seat == 'Economy' %}  $
+              {% elif seat == 'Economy' %} $
               <span>
-                {% if flight2 %} {{flight1.economy_fare |
-                add:flight2.economy_fare+fee}} {% else %}
+                {% if flight2 %}
+                {{flight1.economy_fare+flight2.economy_fare+fee}} {% else %}
                 {{flight1.economy_fare+fee}} {% endif %}
               </span>
               {% endif %}
             </div>
           </div>
         </div>
+        <!-- <div class="coupon-code">
+                        <h5>Have a coupon code?</h5>
+                        <hr>
+                        <div class="row base-fare">
+                            <div class="col-9" style="padding: 10px 10px 10px 0px">
+                                <input type="text" name="coupon" class="form-control" placeholder="Coupon Code" style="text-transform: uppercase;">
+                            </div>
+                            <div class="col coupon-apply" style="padding: 10px 10px 10px 0px">
+                                <center>
+                                    <button type="button" class="btn btn-primary btn-danger">Apply</button>
+                                </center>
+                            </div>
+                        </div>
+                    </div> -->
+      </div>
       <div class="col media-payment-btn">
         <div>
           <button type="submit" class="btn btn-primary btn-danger">
